# informer

./: .editorconfig  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  informer.sln  main.go
.devcontainer/: Dockerfile  devcontainer.json
cmd/: root.go  trace.go
internal/cmd/: binlog.go  root.go
mysql/: mysql.go  schema.go
mysql-protocol/: Cargo.toml
mysql-protocol/examples/: quick-connect.rs
mysql-protocol/src/: conn.rs  error.rs  lib.rs  opts.rs
mysql-protocol/src/conn/: auth.rs  mod.rs  transport.rs
mysql-protocol/src/packet/: generic.rs  handshake.rs  mod.rs  utils.rs
script/: bootstrap  build  destroy  mysql-console  run  start  test
script/helpers/: check-prereqs
source/: source.go
src/Informer.MySQL/: DuplexPipe.cs  Informer.MySQL.csproj  MySQLConnection.cs  SpanExtensions.cs  Transport.cs
src/Informer.MySQL/Protocol/: CapabilityFlags.cs  Connection.cs  HandshakePacket.cs  Packet.cs  StatusFlags.cs
src/informer/: Program.cs  TraceCommand.cs  informer.csproj
stream/: stream.go
test/Informer.MySQL.Tests/: Informer.MySQL.Tests.csproj  SpanExtensionsTests.cs
tracer/: tracer.go
