[package]
name = "mysql-binlog"
version = "0.1.0"
authors = ["Andrew Stanton-Nurse <me@analogrelay.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
byteorder = "1.3.4"
mysql_common = "0.25.0"
tokio = { version = "0.3", features = ["full"] }
